Fix facebook like width on mobile.

--- a/hasweb/static/sass/app.scss
+++ b/hasweb/static/sass/app.scss
@@ -271,12 +271,11 @@ $body-line-height: 20px;
         }
     }
 }
-element {
 
-}
 @media screen and (max-width: 600px) {
     .fb_iframe_widget {
         overflow-y: scroll;
         width: 100%;
+        display: inline-block !important;
     }
 }
